--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 venv/lib/python3.9/site-packages/numpy/.dylibs/libscipy_openblas64_.dylib
 venv/lib/python3.9/site-packages/torch/lib/libtorch_cpu.dylib
+venv/
